Fixed overlapping issue in smaller devices

--- a/style.css
+++ b/style.css
@@ -896,7 +896,7 @@ body.light-mode ul.skills-list li {
         padding: 20px;
     }
     .heading_multi_color {
-        margin-top: 150px; /* Adjust the value as needed */
+        margin-top: 160px; /* Adjust the value as needed */
     }
     
     .card-container {
